[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bt_api_kraken"
version = "0.15.0"
description = "Kraken exchange plugin for bt_api"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bt_api_base>=0.15,<1.0",
]

[project.entry-points."bt_api.plugins"]
kraken = "bt_api_kraken.plugin:register_plugin"

[tool.setuptools.packages.find]
where = ["src"]
