[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bt_api_kraken"
version = "0.15.1"
description = "Kraken exchange plugin for bt_api framework - European cryptocurrency exchange"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "cloudQuant", email = "yunjinqi@gmail.com" }
]
keywords = [
    "bt_api",
    "kraken",
    "cryptocurrency",
    "exchange",
    "trading",
    "algorithmic-trading",
    "crypto",
    "european"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "bt_api_base>=0.15,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.entry-points."bt_api.plugins"]
kraken = "bt_api_kraken.plugin:register_plugin"

[project.urls]
Homepage = "https://github.com/cloudQuant/bt_api_kraken"
Documentation = "https://bt-api-kraken.readthedocs.io/"
Repository = "https://github.com/cloudQuant/bt_api_kraken"
Issues = "https://github.com/cloudQuant/bt_api_kraken/issues"
Changelog = "https://github.com/cloudQuant/bt_api_kraken/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "UP", "E", "F", "W", "TRY003", "TC"]
ignore = ["E501", "TC002", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"src/bt_api_kraken/plugin.py" = ["TC002"]
"src/bt_api_kraken/registry_registration.py" = ["TC002"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
